rename package to @metamask/eth-block-tracker (#183)
* rename package to @metamask/eth-block-tracker

* docs: Replace eth-json-rpc-infura with @metamask/eth-json-rpc-infura in README.md

--- a/merged-packages/eth-block-tracker/package.json
+++ b/merged-packages/eth-block-tracker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eth-block-tracker",
+  "name": "@metamask/eth-block-tracker",
   "version": "8.1.0",
   "description": "A block tracker for the Ethereum blockchain. Keeps track of the latest block.",
   "repository": {
