Move gas and gas fee logic to separate files
Add unit tests.

--- a/packages/transaction-controller/tsconfig.json
+++ b/packages/transaction-controller/tsconfig.json
@@ -4,10 +4,11 @@
     "baseUrl": "./"
   },
   "references": [
+    { "path": "../approval-controller" },
     { "path": "../base-controller" },
     { "path": "../controller-utils" },
-    { "path": "../network-controller" },
-    { "path": "../approval-controller" }
+    { "path": "../gas-fee-controller" },
+    { "path": "../network-controller" }
   ],
   "include": ["../../types", "./src"]
 }
