--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -36,6 +36,7 @@
     "@metamask/base-controller": "^3.2.3",
     "@metamask/controller-utils": "^5.0.2",
     "@metamask/eth-query": "^3.0.1",
+    "@metamask/gas-fee-controller": "^8.0.0",
     "@metamask/metamask-eth-abis": "^3.0.0",
     "@metamask/network-controller": "^14.0.0",
     "@metamask/rpc-errors": "^6.1.0",
