--- a/merged-packages/json-rpc-engine/package.json
+++ b/merged-packages/json-rpc-engine/package.json
@@ -52,6 +52,7 @@
     "depcheck": "^1.4.3",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.5",
     "eslint-plugin-jsdoc": "^39.6.2",
