--- a/packages/queued-request-controller/package.json
+++ b/packages/queued-request-controller/package.json
@@ -33,6 +33,7 @@
     "@metamask/controller-utils": "^5.0.2",
     "@metamask/json-rpc-engine": "^7.1.1",
     "@metamask/network-controller": "^15.0.0",
+    "@metamask/rpc-errors": "^6.1.0",
     "@metamask/selected-network-controller": "^3.0.0",
     "@metamask/swappable-obj-proxy": "^2.1.0"
   },
