--- a/packages/queued-request-controller/package.json
+++ b/packages/queued-request-controller/package.json
@@ -35,7 +35,8 @@
     "@metamask/network-controller": "^15.0.0",
     "@metamask/rpc-errors": "^6.1.0",
     "@metamask/selected-network-controller": "^3.0.0",
-    "@metamask/swappable-obj-proxy": "^2.1.0"
+    "@metamask/swappable-obj-proxy": "^2.1.0",
+    "@metamask/utils": "^8.1.0"
   },
   "devDependencies": {
     "@metamask/approval-controller": "^4.0.1",
