Add transaction gas fee defaults (#1840)
Default all the gas fee parameters (maxFeePerGas, maxPriorityFeePerGas, gasPrice) on all new transactions created via the addTransaction method in the TransactionController.

--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -36,6 +36,7 @@
     "@metamask/base-controller": "^3.2.3",
     "@metamask/controller-utils": "^5.0.2",
     "@metamask/eth-query": "^3.0.1",
+    "@metamask/gas-fee-controller": "^9.0.0",
     "@metamask/metamask-eth-abis": "^3.0.0",
     "@metamask/network-controller": "^15.0.0",
     "@metamask/rpc-errors": "^6.1.0",
@@ -64,6 +65,7 @@
   },
   "peerDependencies": {
     "@metamask/approval-controller": "^4.0.1",
+    "@metamask/gas-fee-controller": "^9.0.0",
     "@metamask/network-controller": "^15.0.0",
     "babel-runtime": "^6.26.0"
   },
