--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -74,6 +74,9 @@
     },
     {
       "path": "./packages/queued-request-controller/tsconfig.build.json"
+    },
+    {
+      "path": "./packages/permission-log-controller/tsconfig.build.json"
     }
   ],
   "files": [],
