--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -34,6 +34,7 @@
     "@metamask/approval-controller": "workspace:^",
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
+    "@metamask/gas-fee-controller": "workspace:^",
     "@metamask/network-controller": "workspace:^",
     "@metamask/utils": "^5.0.1",
     "async-mutex": "^0.2.6",
