--- a/merged-packages/json-rpc-engine/package.json
+++ b/merged-packages/json-rpc-engine/package.json
@@ -49,6 +49,7 @@
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "deepmerge": "^4.2.2",
     "depcheck": "^1.4.3",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
