--- a/merged-packages/json-rpc-engine/tsconfig.json
+++ b/merged-packages/json-rpc-engine/tsconfig.json
@@ -1,16 +1,8 @@
 {
+  "extends": "../../tsconfig.packages.json",
   "compilerOptions": {
-    "esModuleInterop": true,
-    "exactOptionalPropertyTypes": true,
-    "forceConsistentCasingInFileNames": true,
-    "lib": ["ES2020"],
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "noEmit": true,
-    "noErrorTruncation": true,
-    "noUncheckedIndexedAccess": true,
-    "strict": true,
-    "target": "es2020"
+    "baseUrl": "./",
+    "rootDir": "../..",
   },
-  "exclude": ["./dist/**/*"]
+  "include": ["../../types", "../../tests", "./src", "./tests"]
 }
