--- a/packages/eth-json-rpc-provider/package.json
+++ b/packages/eth-json-rpc-provider/package.json
@@ -49,7 +49,8 @@
     "jest": "^27.5.1",
     "jest-it-up": "^2.0.2",
     "ts-jest": "^27.1.4",
-    "typedoc": "^0.24.8"
+    "typedoc": "^0.24.8",
+    "typescript": "~4.8.4"
   },
   "packageManager": "yarn@3.3.0",
   "engines": {
