--- a/merged-packages/json-rpc-engine/tsconfig.json
+++ b/merged-packages/json-rpc-engine/tsconfig.json
@@ -3,6 +3,11 @@
   "compilerOptions": {
     "baseUrl": "./",
     "rootDir": "../..",
+    "exactOptionalPropertyTypes": true,
+    "forceConsistentCasingInFileNames": true,
+    "noErrorTruncation": true,
+    "noUncheckedIndexedAccess": true,
+    "target": "es2020"
   },
   "include": ["../../types", "../../tests", "./src", "./tests"]
 }
