preserve typescript compiler flags from source repo
Co-authored-by: Jongsun Suh <34228073+MajorLift@users.noreply.github.com>

--- a/merged-packages/json-rpc-engine/tsconfig.json
+++ b/merged-packages/json-rpc-engine/tsconfig.json
@@ -8,6 +8,11 @@
     "noErrorTruncation": true,
     "noUncheckedIndexedAccess": true,
     "target": "es2020"
+    "exactOptionalPropertyTypes": true,
+    "forceConsistentCasingInFileNames": true,
+    "noErrorTruncation": true,
+    "noUncheckedIndexedAccess": true,
+    "target": "es2020"
   },
   "include": ["../../types", "../../tests", "./src", "./tests"]
 }
