add queued request to build list

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -71,6 +71,9 @@
     },
     {
       "path": "./packages/transaction-controller/tsconfig.build.json"
+    },
+    {
+      "path": "./packages/queued-request-controller/tsconfig.build.json"
     }
   ],
   "files": [],
