--- a/packages/queued-request-controller/package.json
+++ b/packages/queued-request-controller/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@metamask/selected-network-controller",
-  "version": "3.0.0",
-  "description": "Provides an interface to the currently selected networkClientId for a given domain",
+  "name": "@metamask/queued-request-controller",
+  "version": "0.0.0",
+  "description": "Includes a controller and middleware that implements a request queue",
   "keywords": [
     "MetaMask",
     "Ethereum"
   ],
-  "homepage": "https://github.com/MetaMask/core/tree/main/packages/selected-network-controller#readme",
+  "homepage": "https://github.com/MetaMask/core/tree/main/packages/queued-request-controller#readme",
   "bugs": {
     "url": "https://github.com/MetaMask/core/issues"
   },
@@ -22,7 +22,7 @@
   ],
   "scripts": {
     "build:docs": "typedoc",
-    "changelog:validate": "../../scripts/validate-changelog.sh @metamask/selected-network-controller",
+    "changelog:validate": "../../scripts/validate-changelog.sh @metamask/queued-request-controller",
     "publish:preview": "yarn npm publish --tag preview",
     "test": "jest",
     "test:clean": "jest --clearCache",
@@ -30,11 +30,16 @@
   },
   "dependencies": {
     "@metamask/base-controller": "^3.2.3",
+    "@metamask/controller-utils": "^5.0.2",
     "@metamask/json-rpc-engine": "^7.1.1",
     "@metamask/network-controller": "^15.0.0",
-    "@metamask/swappable-obj-proxy": "^2.1.0"
+    "@metamask/rpc-errors": "^6.1.0",
+    "@metamask/selected-network-controller": "^3.0.0",
+    "@metamask/swappable-obj-proxy": "^2.1.0",
+    "@metamask/utils": "^8.1.0"
   },
   "devDependencies": {
+    "@metamask/approval-controller": "^4.0.1",
     "@metamask/auto-changelog": "^3.4.0",
     "@types/jest": "^27.4.1",
     "deepmerge": "^4.2.2",
@@ -49,7 +54,8 @@
     "typescript": "~4.8.4"
   },
   "peerDependencies": {
-    "@metamask/network-controller": "^15.0.0"
+    "@metamask/network-controller": "^15.0.0",
+    "@metamask/selected-network-controller": "^3.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
