Update json-rpcn-engine package refs in core and fixed lint and constraint errors

--- a/packages/eth-json-rpc-provider/tsconfig.json
+++ b/packages/eth-json-rpc-provider/tsconfig.json
@@ -9,6 +9,10 @@
     "noUncheckedIndexedAccess": true,
     "target": "es2017"
   },
-  "references": [],
+  "references": [
+    {
+      "path": "../json-rpc-engine"
+    }
+  ],
   "include": ["../../types", "../../tests", "./src", "./tests"]
 }
