--- a/packages/permission-controller/tsconfig.json
+++ b/packages/permission-controller/tsconfig.json
@@ -6,7 +6,8 @@
   "references": [
     { "path": "../approval-controller" },
     { "path": "../base-controller" },
-    { "path": "../controller-utils" }
+    { "path": "../controller-utils" },
+    { "path": "../json-rpc-engine" }
   ],
   "include": ["../../types", "./src"]
 }
