--- a/packages/eth-json-rpc-provider/tsconfig.build.json
+++ b/packages/eth-json-rpc-provider/tsconfig.build.json
@@ -5,6 +5,6 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "references": [],
+  "references": [ { "path": "../json-rpc-engine/tsconfig.build.json" } ],
   "include": ["../../types", "./src"]
 }
