--- a/packages/permission-controller/tsconfig.build.json
+++ b/packages/permission-controller/tsconfig.build.json
@@ -8,7 +8,8 @@
   "references": [
     { "path": "../approval-controller/tsconfig.build.json" },
     { "path": "../base-controller/tsconfig.build.json" },
-    { "path": "../controller-utils/tsconfig.build.json" }
+    { "path": "../controller-utils/tsconfig.build.json" },
+    { "path": "../json-rpc-engine/tsconfig.build.json" }
   ],
   "include": ["../../types", "./src"]
 }
