--- a/packages/selected-network-controller/tsconfig.build.json
+++ b/packages/selected-network-controller/tsconfig.build.json
@@ -7,7 +7,8 @@
   },
   "references": [
     { "path": "../base-controller/tsconfig.build.json" },
-    { "path": "../network-controller/tsconfig.build.json" }
+    { "path": "../network-controller/tsconfig.build.json" },
+    { "path": "../json-rpc-engine/tsconfig.build.json" }
   ],
   "include": ["../../types", "./src"]
 }
