--- a/packages/selected-network-controller/tsconfig.json
+++ b/packages/selected-network-controller/tsconfig.json
@@ -10,6 +10,9 @@
     },
     {
       "path": "../network-controller"
+    },
+    {
+      "path": "../json-rpc-engine"
     }
   ],
   "include": ["../../types", "../../tests", "./src", "./tests"]
