--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -74,7 +74,10 @@
     },
     {
       "path": "./packages/queued-request-controller/tsconfig.build.json"
-    }
+    },
+    {
+      "path": "./packages/json-rpc-engine/tsconfig.build.json"
+    },
   ],
   "files": [],
   "include": []
