--- a/tsconfig.json
+++ b/tsconfig.json
@@ -65,6 +65,9 @@
       "path": "./packages/preferences-controller"
     },
     {
+      "path": "./packages/queued-request-controller"
+    },
+    {
       "path": "./packages/rate-limit-controller"
     },
     {
