--- a/packages/assets-controllers/package.json
+++ b/packages/assets-controllers/package.json
@@ -42,6 +42,7 @@
     "@metamask/metamask-eth-abis": "3.0.0",
     "@metamask/network-controller": "^15.0.0",
     "@metamask/polling-controller": "^0.2.0",
+    "@metamask/polling-controller": "^0.3.0",
     "@metamask/preferences-controller": "^4.4.3",
     "@metamask/rpc-errors": "^6.1.0",
     "@metamask/utils": "^8.1.0",
