--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "publish-previews": "yarn workspaces foreach --parallel --verbose run publish:preview",
     "setup": "yarn install",
     "test": "yarn workspaces foreach --parallel --verbose run test",
-    "test:clean": "yarn workspaces foreach --parallel --verbose run test:clean && yarn test"
+    "test:clean": "yarn workspaces foreach --parallel --verbose run test:clean && yarn test",
+    "test:silent": "yarn test --collectCoverage=false --reporters jest-silent-reporter"
   },
   "simple-git-hooks": {
     "pre-push": "yarn lint"
@@ -61,6 +62,7 @@
     "eth-block-tracker": "^8.0.0",
     "execa": "^5.0.0",
     "isomorphic-fetch": "^3.0.0",
+    "jest-silent-reporter": "^0.5.0",
     "nock": "^13.3.1",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.4.5",
