removed additional compiler options in tsconfig.json
Co-authored-by: Elliot Winkler <elliot.winkler@gmail.com>

--- a/packages/json-rpc-middleware-stream/tsconfig.json
+++ b/packages/json-rpc-middleware-stream/tsconfig.json
@@ -2,12 +2,8 @@
   "extends": "../../tsconfig.packages.json",
   "compilerOptions": {
     "baseUrl": "./",
-    "rootDir": "../..",
-    "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
-    "noErrorTruncation": true,
-    "noUncheckedIndexedAccess": true,
-    "target": "es2020"
+    "target": "es2017"
   },
-  "include": ["../../types", "../../tests", "./src", "./tests"]
+  "include": ["../../types", "./src"]
 }
