--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -41,6 +41,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - run: yarn --immutable
+      - run: yarn eslint --print-config packages/assets-controllers/src/AssetsContractController.test.ts
       - run: rm -f .eslintcache
       - run: yarn lint
       - name: Require clean working directory
