--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prepare-preview-builds": "./scripts/prepare-preview-builds.sh",
     "publish-previews": "yarn workspaces foreach --parallel --verbose run publish:preview",
     "setup": "yarn install",
-    "test": "yarn test:verbose --collectCoverage=false --reporters=jest-silent-reporter",
+    "test": "yarn test:verbose --silent --collectCoverage=false --reporters=jest-silent-reporter",
     "test:clean": "yarn workspaces foreach --parallel --verbose run test:clean && yarn test",
     "test:verbose": "yarn workspaces foreach --parallel --verbose run test:verbose"
   },
