--- a/packages/accounts-controller/package.json
+++ b/packages/accounts-controller/package.json
@@ -66,6 +66,7 @@
     "ethereum-cryptography": "^2.1.2",
     "immer": "^9.0.6",
     "lodash": "^4.17.21",
+    "reselect": "^5.1.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
