--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -89,6 +89,7 @@
     "deepmerge": "^4.2.2",
     "immer": "^9.0.6",
     "jest": "^28.0.0",
+    "jest-environment-jsdom": "^28.0.0",
     "nock": "^13.3.1",
     "sinon": "^9.2.4",
     "ts-jest": "^28.0.0",
