--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "execa": "^5.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^28.0.0",
+    "jest-environment-node": "^29.0.0",
     "jest-silent-reporter": "^0.5.0",
     "lodash": "^4.17.21",
     "nock": "^13.3.1",
