feat: add `@metamask/user-profile-controller` package

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -69,7 +69,8 @@
     },
     { "path": "./packages/transaction-controller/tsconfig.build.json" },
     { "path": "./packages/transaction-pay-controller/tsconfig.build.json" },
-    { "path": "./packages/user-operation-controller/tsconfig.build.json" }
+    { "path": "./packages/user-operation-controller/tsconfig.build.json" },
+    { "path": "./packages/user-profile-controller" }
   ],
   "files": [],
   "include": []
