feat: add queue mechanism

--- a/packages/user-profile-controller/tsconfig.json
+++ b/packages/user-profile-controller/tsconfig.json
@@ -4,8 +4,11 @@
     "baseUrl": "./"
   },
   "references": [
+    { "path": "../../packages/accounts-controller" },
     { "path": "../../packages/base-controller" },
+    { "path": "../../packages/keyring-controller" },
     { "path": "../../packages/messenger" },
+    { "path": "../../packages/polling-controller" },
   ],
   "include": ["../../types", "./src"],
   /**
