--- a/packages/user-profile-controller/package.json
+++ b/packages/user-profile-controller/package.json
@@ -51,10 +51,15 @@
     "@metamask/base-controller": "^9.0.0",
     "@metamask/controller-utils": "^11.15.0",
     "@metamask/messenger": "^0.3.0",
-    "@metamask/utils": "^11.8.1"
+    "@metamask/polling-controller": "^15.0.0",
+    "@metamask/utils": "^11.8.1",
+    "async-mutex": "^0.5.0"
   },
   "devDependencies": {
+    "@metamask/accounts-controller": "^34.0.0",
     "@metamask/auto-changelog": "^3.4.4",
+    "@metamask/keyring-controller": "^24.0.0",
+    "@metamask/keyring-internal-api": "^9.0.0",
     "@ts-bridge/cli": "^0.6.4",
     "@types/jest": "^27.4.1",
     "deepmerge": "^4.2.2",
@@ -65,6 +70,10 @@
     "typedoc": "^0.24.8",
     "typedoc-plugin-missing-exports": "^2.0.0",
     "typescript": "~5.3.3"
+  },
+  "peerDependencies": {
+    "@metamask/accounts-controller": "^34.0.0",
+    "@metamask/keyring-controller": "^24.0.0"
   },
   "engines": {
     "node": "^18.18 || >=20"
