--- a/packages/user-profile-controller/tsconfig.build.json
+++ b/packages/user-profile-controller/tsconfig.build.json
@@ -6,8 +6,11 @@
     "rootDir": "./src"
   },
   "references": [
+    { "path": "../../packages/accounts-controller/tsconfig.build.json" },
     { "path": "../../packages/base-controller/tsconfig.build.json" },
-    { "path": "../../packages/messenger/tsconfig.build.json" }
+    { "path": "../../packages/keyring-controller/tsconfig.build.json" },
+    { "path": "../../packages/messenger/tsconfig.build.json" },
+    { "path": "../../packages/polling-controller/tsconfig.build.json" }
   ],
   "include": ["../../types", "./src"]
 }
