--- a/packages/user-profile-controller/tsconfig.json
+++ b/packages/user-profile-controller/tsconfig.json
@@ -5,7 +5,7 @@
   },
   "references": [
     { "path": "../../packages/base-controller" },
-    { "path": "../../packages/messenger" },
+    { "path": "../../packages/messenger" }
   ],
   "include": ["../../types", "./src"],
   /**
