--- a/.github/workflows/changelog-check.yml
+++ b/.github/workflows/changelog-check.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   check_changelog:
-    uses: MetaMask/github-tools/.github/actions/changelog-check/action.yml@caa983d60caeaef88b420e6e2456a581f346597e
+    uses: MetaMask/github-tools/.github/actions/changelog-check@caa983d60caeaef88b420e6e2456a581f346597e
     with:
       base-branch: ${{ github.event.pull_request.base.ref }}
       head-ref: ${{ github.head_ref }}
