--- a/packages/user-profile-controller/package.json
+++ b/packages/user-profile-controller/package.json
@@ -60,6 +60,7 @@
     "@metamask/auto-changelog": "^3.4.4",
     "@metamask/keyring-controller": "^24.0.0",
     "@metamask/keyring-internal-api": "^9.0.0",
+    "@metamask/profile-sync-controller": "^26.0.0",
     "@ts-bridge/cli": "^0.6.4",
     "@types/jest": "^27.4.1",
     "deepmerge": "^4.2.2",
@@ -73,7 +74,8 @@
   },
   "peerDependencies": {
     "@metamask/accounts-controller": "^34.0.0",
-    "@metamask/keyring-controller": "^24.0.0"
+    "@metamask/keyring-controller": "^24.0.0",
+    "@metamask/profile-sync-controller": "^26.0.0"
   },
   "engines": {
     "node": "^18.18 || >=20"
