--- a/packages/user-profile-controller/tsconfig.build.json
+++ b/packages/user-profile-controller/tsconfig.build.json
@@ -10,7 +10,8 @@
     { "path": "../../packages/base-controller/tsconfig.build.json" },
     { "path": "../../packages/keyring-controller/tsconfig.build.json" },
     { "path": "../../packages/messenger/tsconfig.build.json" },
-    { "path": "../../packages/polling-controller/tsconfig.build.json" }
+    { "path": "../../packages/polling-controller/tsconfig.build.json" },
+    { "path": "../../packages/profile-sync-controller/tsconfig.build.json" }
   ],
   "include": ["../../types", "./src"]
 }
