--- a/packages/user-profile-controller/tsconfig.json
+++ b/packages/user-profile-controller/tsconfig.json
@@ -8,7 +8,8 @@
     { "path": "../../packages/base-controller" },
     { "path": "../../packages/keyring-controller" },
     { "path": "../../packages/messenger" },
-    { "path": "../../packages/polling-controller" }
+    { "path": "../../packages/polling-controller" },
+    { "path": "../../packages/profile-sync-controller" }
   ],
   "include": ["../../types", "./src"],
   /**
