--- a/packages/assets-controllers/package.json
+++ b/packages/assets-controllers/package.json
@@ -96,6 +96,7 @@
     "@metamask/permission-controller": "^12.1.1",
     "@metamask/phishing-controller": "^16.1.0",
     "@metamask/preferences-controller": "^22.0.0",
+    "@metamask/profile-sync-controller": "^27.0.0",
     "@metamask/providers": "^22.1.0",
     "@metamask/snaps-controllers": "^14.0.1",
     "@metamask/transaction-controller": "^62.1.0",
@@ -124,6 +125,7 @@
     "@metamask/permission-controller": "^12.0.0",
     "@metamask/phishing-controller": "^16.0.0",
     "@metamask/preferences-controller": "^22.0.0",
+    "@metamask/profile-sync-controller": "^27.0.0",
     "@metamask/providers": "^22.0.0",
     "@metamask/snaps-controllers": "^14.0.0",
     "@metamask/transaction-controller": "^62.0.0",
