Go through one more time

--- a/packages/controller-utils/package.json
+++ b/packages/controller-utils/package.json
@@ -76,6 +76,9 @@
     "typedoc-plugin-missing-exports": "^2.0.0",
     "typescript": "~5.3.3"
   },
+  "peerDependencies": {
+    "@babel/runtime": "^7.0.0"
+  },
   "engines": {
     "node": "^18.18 || >=20"
   },
