--- a/packages/assets-controllers/package.json
+++ b/packages/assets-controllers/package.json
@@ -99,6 +99,7 @@
     "@metamask/ethjs-provider-http": "^0.3.0",
     "@metamask/keyring-internal-api": "^9.0.0",
     "@metamask/keyring-snap-client": "^8.0.0",
+    "@metamask/providers": "^22.1.0",
     "@ts-bridge/cli": "^0.6.4",
     "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.191",
@@ -113,6 +114,10 @@
     "typedoc-plugin-missing-exports": "^2.0.0",
     "typescript": "~5.3.3",
     "webextension-polyfill": "^0.12.0"
+  },
+  "peerDependencies": {
+    "@metamask/providers": "^22.0.0",
+    "webextension-polyfill": "^0.10.0 || ^0.11.0 || ^0.12.0"
   },
   "engines": {
     "node": "^18.18 || >=20"
