--- a/packages/multichain-account-service/package.json
+++ b/packages/multichain-account-service/package.json
@@ -84,6 +84,11 @@
     "uuid": "^8.3.2",
     "webextension-polyfill": "^0.12.0"
   },
+  "peerDependencies": {
+    "@metamask/account-api": "^0.12.0",
+    "@metamask/providers": "^22.0.0",
+    "webextension-polyfill": "^0.10.0 || ^0.11.0 || ^0.12.0"
+  },
   "engines": {
     "node": "^18.18 || >=20"
   },
