--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -59,7 +59,6 @@
     "@metamask/approval-controller": "^8.0.0",
     "@metamask/base-controller": "^9.0.0",
     "@metamask/controller-utils": "^11.16.0",
-    "@metamask/eth-block-tracker": "^15.0.0",
     "@metamask/eth-query": "^4.0.0",
     "@metamask/gas-fee-controller": "^26.0.0",
     "@metamask/messenger": "^0.3.0",
@@ -80,6 +79,7 @@
   "devDependencies": {
     "@babel/runtime": "^7.23.9",
     "@metamask/auto-changelog": "^3.4.4",
+    "@metamask/eth-block-tracker": "^15.0.0",
     "@metamask/eth-json-rpc-provider": "^6.0.0",
     "@metamask/ethjs-provider-http": "^0.3.0",
     "@ts-bridge/cli": "^0.6.4",
@@ -95,6 +95,10 @@
     "typedoc": "^0.24.8",
     "typedoc-plugin-missing-exports": "^2.0.0",
     "typescript": "~5.3.3"
+  },
+  "peerDependencies": {
+    "@babel/runtime": "^7.0.0",
+    "@metamask/eth-block-tracker": ">=9"
   },
   "engines": {
     "node": "^18.18 || >=20"
