--- a/packages/gas-fee-controller/package.json
+++ b/packages/gas-fee-controller/package.json
@@ -52,6 +52,7 @@
     "@metamask/controller-utils": "^11.16.0",
     "@metamask/eth-query": "^4.0.0",
     "@metamask/ethjs-unit": "^0.3.0",
+    "@metamask/network-controller": "^26.0.0",
     "@metamask/polling-controller": "^16.0.0",
     "@metamask/utils": "^11.8.1",
     "@types/bn.js": "^5.1.5",
@@ -62,7 +63,6 @@
   "devDependencies": {
     "@babel/runtime": "^7.23.9",
     "@metamask/auto-changelog": "^3.4.4",
-    "@metamask/network-controller": "^26.0.0",
     "@ts-bridge/cli": "^0.6.4",
     "@types/jest": "^27.4.1",
     "@types/jest-when": "^2.7.3",
@@ -77,8 +77,7 @@
     "typescript": "~5.3.3"
   },
   "peerDependencies": {
-    "@babel/runtime": "^7.0.0",
-    "@metamask/network-controller": "^26.0.0"
+    "@babel/runtime": "^7.0.0"
   },
   "engines": {
     "node": "^18.18 || >=20"
