--- a/packages/user-profile-controller/package.json
+++ b/packages/user-profile-controller/package.json
@@ -51,6 +51,7 @@
     "@metamask/base-controller": "^9.0.0",
     "@metamask/controller-utils": "^11.16.0",
     "@metamask/messenger": "^0.3.0",
+    "@metamask/profile-sync-controller": "^27.0.0",
     "@metamask/utils": "^11.8.1"
   },
   "devDependencies": {
