add references to tsconfig

--- a/packages/user-profile-controller/tsconfig.build.json
+++ b/packages/user-profile-controller/tsconfig.build.json
@@ -7,7 +7,9 @@
   },
   "references": [
     { "path": "../../packages/base-controller/tsconfig.build.json" },
+    { "path": "../../packages/controller-utils/tsconfig.build.json" },
     { "path": "../../packages/messenger/tsconfig.build.json" }
+    { "path": "../../packages/profile-sync-controller/tsconfig.build.json" }
   ],
   "include": ["../../types", "./src"]
 }
