--- a/packages/user-profile-controller/tsconfig.json
+++ b/packages/user-profile-controller/tsconfig.json
@@ -5,7 +5,9 @@
   },
   "references": [
     { "path": "../../packages/base-controller" },
+    { "path": "../../packages/controller-utils" },
     { "path": "../../packages/messenger" }
+    { "path": "../../packages/profile-sync-controller" }
   ],
   "include": ["../../types", "./src"],
   /**
