--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -55,6 +55,7 @@
     { "path": "./packages/phishing-controller/tsconfig.build.json" },
     { "path": "./packages/polling-controller/tsconfig.build.json" },
     { "path": "./packages/preferences-controller/tsconfig.build.json" },
+    { "path": "./packages/profile-metrics-controller/tsconfig.build.json" },
     { "path": "./packages/profile-sync-controller/tsconfig.build.json" },
     { "path": "./packages/rate-limit-controller/tsconfig.build.json" },
     { "path": "./packages/remote-feature-flag-controller/tsconfig.build.json" },
@@ -70,7 +71,6 @@
     { "path": "./packages/transaction-controller/tsconfig.build.json" },
     { "path": "./packages/transaction-pay-controller/tsconfig.build.json" },
     { "path": "./packages/user-operation-controller/tsconfig.build.json" },
-    { "path": "./packages/user-profile-controller/tsconfig.build.json" }
   ],
   "files": [],
   "include": []
