revert tsconfig files changes

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -70,7 +70,7 @@
     },
     { "path": "./packages/transaction-controller/tsconfig.build.json" },
     { "path": "./packages/transaction-pay-controller/tsconfig.build.json" },
-    { "path": "./packages/user-operation-controller/tsconfig.build.json" },
+    { "path": "./packages/user-operation-controller/tsconfig.build.json" }
   ],
   "files": [],
   "include": []
