--- a/packages/analytics-controller/package.json
+++ b/packages/analytics-controller/package.json
@@ -50,8 +50,7 @@
   "dependencies": {
     "@metamask/base-controller": "^9.0.0",
     "@metamask/messenger": "^0.3.0",
-    "@metamask/utils": "^11.8.1",
-    "uuid": "^8.3.2"
+    "@metamask/utils": "^11.8.1"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.4.4",
