--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pre-push": "yarn lint"
   },
   "resolutions": {
+    "@metamask/eth-json-rpc-provider@npm:^5.0.0": "npm:^5.0.1",
     "elliptic@6.5.4": "^6.5.7",
     "fast-xml-parser@^4.3.4": "^4.4.1",
     "ws@7.4.6": "^7.5.10"
