--- a/packages/storage-service/package.json
+++ b/packages/storage-service/package.json
@@ -16,7 +16,7 @@
     "type": "git",
     "url": "https://github.com/MetaMask/core.git"
   },
-  "license": "MIT",
+  "license": "(MIT OR Apache-2.0)",
   "sideEffects": false,
   "exports": {
     ".": {
