--- a/packages/profile-metrics-controller/tsconfig.json
+++ b/packages/profile-metrics-controller/tsconfig.json
@@ -4,9 +4,12 @@
     "baseUrl": "./"
   },
   "references": [
+    { "path": "../../packages/accounts-controller" },
     { "path": "../../packages/base-controller" },
     { "path": "../../packages/controller-utils" },
+    { "path": "../../packages/keyring-controller" },
     { "path": "../../packages/messenger" },
+    { "path": "../../packages/polling-controller" },
     { "path": "../../packages/profile-sync-controller" }
   ],
   "include": ["../../types", "./src"],
