--- a/package.json
+++ b/package.json
@@ -67,14 +67,14 @@
     "@metamask/network-controller": "^25.0.0",
     "@metamask/utils": "^11.8.1",
     "@ts-bridge/cli": "^0.6.4",
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^30.0.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^16.18.54",
     "@types/semver": "^7",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
     "@yarnpkg/types": "^4.0.0",
-    "babel-jest": "^29.7.0",
+    "babel-jest": "^30.0.0",
     "depcheck": "^1.4.7",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^9.1.0",
@@ -87,8 +87,8 @@
     "eslint-plugin-promise": "^7.1.0",
     "execa": "^5.0.0",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "^29.5.0",
-    "jest-environment-node": "^29.0.0",
+    "jest": "^30.0.0",
+    "jest-environment-node": "^30.0.0",
     "jest-silent-reporter": "^0.5.0",
     "lodash": "^4.17.21",
     "nock": "^13.3.1",
@@ -114,7 +114,8 @@
       "@keystonehq/bc-ur-registry-eth>hdkey>secp256k1": true,
       "babel-runtime>core-js": false,
       "simple-git-hooks": false,
-      "tsx>esbuild": false
+      "tsx>esbuild": false,
+      "jest>@jest/core>jest-resolve>unrs-resolver": false
     }
   }
 }
