--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -64,6 +64,7 @@
     { "path": "./packages/selected-network-controller/tsconfig.build.json" },
     { "path": "./packages/shield-controller/tsconfig.build.json" },
     { "path": "./packages/signature-controller/tsconfig.build.json" },
+    { "path": "./packages/storage-service/tsconfig.build.json" },
     { "path": "./packages/subscription-controller/tsconfig.build.json" },
     {
       "path": "./packages/token-search-discovery-controller/tsconfig.build.json"
