--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,11 @@
 {
+  /**
+   * This configuration is used by the `build` script in `package.json`.
+   *
+   * This is just used as a way to request builds for all packages. `tsconfig.base.json` is not
+   * extended here because the `tsconfig.build.json` file referenced for each package already
+   * (indirectly) extends it.
+   */
   "references": [
     { "path": "./packages/account-tree-controller/tsconfig.build.json" },
     { "path": "./packages/accounts-controller/tsconfig.build.json" },
