--- a/tsconfig.packages.json
+++ b/tsconfig.packages.json
@@ -1,10 +1,9 @@
 {
+  /**
+   * This configuration is extended by the `tsconfig.json` configuration in each package.
+   */
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "composite": true,
-    "esModuleInterop": true,
-    "lib": ["ES2020", "DOM"],
-    "module": "Node16",
-    "moduleResolution": "Node16",
     /**
      * Here we ensure that TypeScript resolves `@metamask/*` imports to the
      * uncompiled source code for packages that live in this repo.
@@ -15,8 +14,6 @@
     "paths": {
       "@metamask/json-rpc-engine/v2": ["../json-rpc-engine/src/v2/index.ts"],
       "@metamask/*": ["../*/src"]
-    },
-    "strict": true,
-    "target": "ES2020"
+    }
   }
 }
