chore: continue adding config registry controller

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -23,6 +23,7 @@
     { "path": "./packages/chain-agnostic-permission/tsconfig.build.json" },
     { "path": "./packages/claims-controller/tsconfig.build.json" },
     { "path": "./packages/composable-controller/tsconfig.build.json" },
+    { "path": "./packages/config-registry-controller/tsconfig.build.json" },
     { "path": "./packages/controller-utils/tsconfig.build.json" },
     { "path": "./packages/delegation-controller/tsconfig.build.json" },
     { "path": "./packages/earn-controller/tsconfig.build.json" },
