--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -31,8 +31,9 @@
 /packages/user-operation-controller         @MetaMask/confirmations
 
 ## Delegation Team
-/packages/gator-permissions-controller @MetaMask/delegation
-/packages/eip-7702-internal-rpc-middleware @MetaMask/delegation @MetaMask/core-platform
+/packages/delegation-controller             @MetaMask/delegation
+/packages/gator-permissions-controller      @MetaMask/delegation
+/packages/eip-7702-internal-rpc-middleware  @MetaMask/delegation @MetaMask/core-platform
 
 ## Earn Team
 /packages/earn-controller                   @MetaMask/earn
@@ -53,9 +54,6 @@
 
 ## Portfolio Team
 /packages/token-search-discovery-controller      @MetaMask/portfolio
-
-## Vault Team
-/packages/delegation-controller           @MetaMask/vault
 
 ## Wallet Integrations Team
 /packages/chain-agnostic-permission        @MetaMask/wallet-integrations
@@ -119,8 +117,8 @@
 /packages/assets-controllers/CHANGELOG.md         @MetaMask/metamask-assets @MetaMask/core-platform
 /packages/chain-agnostic-permission/package.json  @MetaMask/wallet-integrations @MetaMask/core-platform
 /packages/chain-agnostic-permission/CHANGELOG.md  @MetaMask/wallet-integrations @MetaMask/core-platform
-/packages/delegation-controller/package.json      @MetaMask/vault @MetaMask/core-platform
-/packages/delegation-controller/CHANGELOG.md      @MetaMask/vault @MetaMask/core-platform
+/packages/delegation-controller/package.json      @MetaMask/delegation @MetaMask/core-platform
+/packages/delegation-controller/CHANGELOG.md      @MetaMask/delegation @MetaMask/core-platform
 /packages/earn-controller/package.json            @MetaMask/earn @MetaMask/core-platform
 /packages/earn-controller/CHANGELOG.md            @MetaMask/earn @MetaMask/core-platform
 /packages/eip-5792-middleware/package.json        @MetaMask/wallet-integrations @MetaMask/core-platform
