--- a/packages/config-registry-controller/package.json
+++ b/packages/config-registry-controller/package.json
@@ -49,7 +49,8 @@
   },
   "dependencies": {
     "@metamask/base-controller": "^9.0.0",
-    "@metamask/messenger": "^0.3.0"
+    "@metamask/messenger": "^0.3.0",
+    "@metamask/polling-controller": "^1.0.0"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
