--- a/packages/config-registry-controller/tsconfig.json
+++ b/packages/config-registry-controller/tsconfig.json
@@ -5,7 +5,8 @@
   },
   "references": [
     { "path": "../base-controller" },
-    { "path": "../messenger" }
+    { "path": "../messenger" },
+    { "path": "../polling-controller" }
   ],
   "include": ["../../types", "./src"]
 }
