--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,6 +56,7 @@
     { "path": "./packages/preferences-controller" },
     { "path": "./packages/profile-metrics-controller" },
     { "path": "./packages/profile-sync-controller" },
+    { "path": "./packages/ramps-controller" },
     { "path": "./packages/rate-limit-controller" },
     { "path": "./packages/remote-feature-flag-controller" },
     { "path": "./packages/sample-controllers" },
