--- a/packages/ramps-controller/package.json
+++ b/packages/ramps-controller/package.json
@@ -56,8 +56,12 @@
     "@metamask/auto-changelog": "^3.4.4",
     "@ts-bridge/cli": "^0.6.4",
     "@types/jest": "^27.4.1",
+    "@types/sinon": "^9.0.10",
     "deepmerge": "^4.2.2",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^27.5.1",
+    "nock": "^13.3.1",
+    "sinon": "^9.2.4",
     "ts-jest": "^27.1.4",
     "typedoc": "^0.24.8",
     "typedoc-plugin-missing-exports": "^2.0.0",
