--- a/packages/ramps-controller/package.json
+++ b/packages/ramps-controller/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@metamask/ramps-controller",
   "version": "0.0.0",
-  "description": "A controller for managing cryptocurrency on/off ramps functionality.",
+  "description": "A controller for managing cryptocurrency on/off ramps functionality",
   "keywords": [
     "MetaMask",
     "Ethereum"
@@ -49,7 +49,7 @@
   },
   "dependencies": {
     "@metamask/base-controller": "^9.0.0",
-    "@metamask/controller-utils": "^11.8.0",
+    "@metamask/controller-utils": "^11.16.0",
     "@metamask/messenger": "^0.3.0"
   },
   "devDependencies": {
