feat: add configregistryqpiservice and integrate with controller

--- a/packages/config-registry-controller/tsconfig.json
+++ b/packages/config-registry-controller/tsconfig.json
@@ -5,6 +5,7 @@
   },
   "references": [
     { "path": "../base-controller" },
+    { "path": "../controller-utils" },
     { "path": "../messenger" },
     { "path": "../polling-controller" }
   ],
