--- a/packages/config-registry-controller/package.json
+++ b/packages/config-registry-controller/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@metamask/base-controller": "^9.0.0",
+    "@metamask/controller-utils": "^11.16.0",
     "@metamask/messenger": "^0.3.0",
     "@metamask/polling-controller": "^1.0.0"
   },
@@ -59,6 +60,8 @@
     "@types/jest": "^27.4.1",
     "deepmerge": "^4.2.2",
     "jest": "^27.5.1",
+    "nock": "^13.3.1",
+    "sinon": "^9.2.4",
     "ts-jest": "^27.1.4",
     "typedoc": "^0.24.8",
     "typedoc-plugin-missing-exports": "^2.0.0",
