feat(ramps): adds ramps controller with geolocation state (#7316)
## Explanation

<!--
Thanks for your contribution! Take a moment to answer these questions so
that reviewers have the information they need to properly understand
your changes:

* What is the current state of things and why does it need to change?
* What is the solution your changes offer and how does it work?
* Are there any changes whose purpose might not obvious to those
unfamiliar with the domain?
* If your primary goal was to update one package but you found you had
to update another one along the way, why did you do so?
* If you had to upgrade a dependency, why did you do so?
-->

This PR introduces a new `@metamask/ramps-controller` package that will
provide functionality for managing cryptocurrency on/off ramps within
MetaMask.

### What's Included

#### RampsController
A controller that manages ramps-related state, currently focused on user
geolocation:
- Stores the user's country code determined by IP-based geolocation
- Exposes an `updateGeolocation()` method that fetches and persists the
user's geolocation
- State is persisted, included in debug snapshots, state logs, and
exposed to the UI

#### OnRampService
A service class that handles API communication with the OnRamp backend:
- Supports multiple environments: Production, Staging, and Development
- Uses `createServicePolicy` from `@metamask/controller-utils` for
resilient HTTP requests with:
  - Automatic retries (up to 4 attempts for 5xx errors)
  - Circuit breaker pattern
  - Degradation detection (requests taking >5 seconds)
- Exposes `getGeolocation()` method via messenger pattern
- Properly validates API responses

#### API Endpoints
- **Production**: `https://on-ramp.api.cx.metamask.io`
- **Staging**: `https://on-ramp.uat-api.cx.metamask.io`
- **Development**: `http://localhost:3000`

### Architecture

The package follows the established controller/service patterns in the
monorepo:
- Uses `@metamask/base-controller` for state mana

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -64,6 +64,7 @@
     { "path": "./packages/preferences-controller/tsconfig.build.json" },
     { "path": "./packages/profile-metrics-controller/tsconfig.build.json" },
     { "path": "./packages/profile-sync-controller/tsconfig.build.json" },
+    { "path": "./packages/ramps-controller/tsconfig.build.json" },
     { "path": "./packages/rate-limit-controller/tsconfig.build.json" },
     { "path": "./packages/remote-feature-flag-controller/tsconfig.build.json" },
     { "path": "./packages/sample-controllers/tsconfig.build.json" },
