--- a/packages/config-registry-controller/package.json
+++ b/packages/config-registry-controller/package.json
@@ -51,7 +51,8 @@
     "@metamask/base-controller": "^9.0.0",
     "@metamask/controller-utils": "^11.16.0",
     "@metamask/messenger": "^0.3.0",
-    "@metamask/polling-controller": "^1.0.0"
+    "@metamask/polling-controller": "^1.0.0",
+    "@metamask/remote-feature-flag-controller": "workspace:*"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
