--- a/packages/config-registry-controller/tsconfig.build.json
+++ b/packages/config-registry-controller/tsconfig.build.json
@@ -10,7 +10,8 @@
     { "path": "../controller-utils/tsconfig.build.json" },
     { "path": "../messenger/tsconfig.build.json" },
     { "path": "../network-controller/tsconfig.build.json" },
-    { "path": "../polling-controller/tsconfig.build.json" }
+    { "path": "../polling-controller/tsconfig.build.json" },
+    { "path": "../remote-feature-flag-controller/tsconfig.build.json" }
   ],
   "include": ["../../types", "./src"]
 }
