Add checkout, and fix `all-jobs-pass` check

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,17 +13,24 @@ concurrency:
 jobs:
   check-skip-merge-queue:
     name: Check if pull request can skip merge queue
-    if: github.event_name == 'merge_group'
     runs-on: ubuntu-latest
     outputs:
       skip-merge-queue: ${{ steps.check-skip-merge-queue.outputs.up-to-date }}
     steps:
-      - id: check-skip-merge-queue
+      - name: Checkout repository
+        uses: actions/checkout@v6
+        if: github.event_name == 'merge_group'
+      - name: Check pull request merge queue status
+        id: check-skip-merge-queue
+        if: github.event_name == 'merge_group'
         uses: ./.github/actions/check-merge-queue
         with:
           head-ref: ${{ github.event.merge_group.head_ref }}
           base-ref: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set skip-merge-queue output to false
+        if: github.event_name != 'merge_group'
+        run: echo "skip-merge-queue=false" >> "$GITHUB_OUTPUT"
 
   check-workflows:
     name: Check workflows
@@ -161,7 +168,6 @@ jobs:
     steps:
       - name: Check that all jobs have passed
         run: |
-          passed="${{ needs.all-jobs-complete.outputs.passed }}"
-          if [[ $passed != "true" ]]; then
+          if [[ "$PASSED" != "true" ]]; then
             exit 1
           fi
