Simplify logic further

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,15 @@ concurrency:
 jobs:
   check-skip-merge-queue:
     name: Check if pull request can skip merge queue
+    if: github.event_name == 'merge_group
     runs-on: ubuntu-latest
     outputs:
       skip-merge-queue: ${{ steps.check-skip-merge-queue.outputs.up-to-date }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
-        if: github.event_name == 'merge_group'
       - name: Check pull request merge queue status
         id: check-skip-merge-queue
-        if: github.event_name == 'merge_group'
         uses: ./.github/actions/check-merge-queue
         with:
           head-ref: ${{ github.event.merge_group.head_ref }}
